# PKOcsv2mt940

./: CMakeLists.txt  CsvReader.cpp  CsvRow.cpp  Mt940.cpp  PKOcsv2mt940.sublime-project  PKOcsv2mt940.sublime-workspace  csv2mt940.cpp
include/: CsvReader.hpp  CsvRow.hpp  Mt940.hpp  csv2mt940.hpp  csvfields.hpp
